Fix footer on mobile

--- a/bootstrap/less/custom.less
+++ b/bootstrap/less/custom.less
@@ -739,9 +739,11 @@ footer {
     }
     z-index: 900;
 
+    box-shadow: 0 -10px 20px rgba(0, 64, 61, 0.4);
     background-color: @brand-primary;
     color: rgb(0, 96, 91);
     @media (min-width: @screen-sm-min) {
+        box-shadow: unset;
         background: linear-gradient(180deg, transparent, black 50%);
         color: white;
     }
@@ -791,14 +793,30 @@ footer {
         }
     }
 
+    .social-links {
+        margin-bottom: 26px;
+        line-height: 34px;
+        text-align: center;
+
+        a {
+            margin-left: 8px;
+            margin-right: 8px;
+        }
+
+        img {
+            width: auto;
+            height: 22px;
+        }
+    }
+
     .copyright {
         margin-top: 2em;
         font-size: 0.8em;
+        text-align: center;
 
         color: rgb(0, 96, 91);
         @media (min-width: @screen-sm-min) {
             font-size: 0.9em;
-            text-align: center;
             color: #577575;
         }
     }
@@ -812,21 +830,7 @@ footer {
             color: black;
             font-weight: bold;
             border-bottom: solid 2px black;
-            margin-bottom: 6px;
-        }
-
-        li.icon-list {
-            margin-top: 12px;
-            line-height: 34px;
-
-            a {
-                margin-right: 16px;
-            }
-
-            img {
-                width: auto;
-                height: 22px;
-            }
+            margin-bottom: 8px;
         }
     }
 
